--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -10,3 +10,11 @@ spring:
     hibernate:
       ddl-auto: create-drop
     show-sql: true # Muestra las consultas SQL en la consola
+
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+      settings:
+        web-allow-others: true
+          
